--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@vueuse/math": "^10.11.1",
     "apexcharts": "3.49.2",
     "axios": "^1.7.9",
+    "laravel-echo": "^2.1.7",
     "pinia": "^2.3.0",
     "prismjs": "^1.29.0",
+    "pusher-js": "^8.4.0",
     "roboto-fontface": "^0.10.0",
     "vue": "^3.5.13",
     "vue-flatpickr-component": "11.0.5",
